2005-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* permview.cs: Sort the XML output for easier searching

2005-08-28  Jb Evain  <jbevain@gmail.com>

	* permview.cs: match Cecil's api changes.

2005-03-11  Sebastien Pouliot  <sebastien@ximian.com>

	* permview.cs: Added XML output of permissions;

2005-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* ChangeLog: Track changes to permview;
	* permview.cs: Permview tool based on Cecil;
	* README: Warning about non supported tool;