@@ -1,0 +1,2 @@
+#!/bin/sh
+exec @MONO@ @prefix@/lib/permview/permview.exe $MONO_EXTRA_ARGS "$@"
