@@ -1,0 +1,2 @@
+This version of PERMVIEW is based on Cecil and is more complete than the
+version shipped with Mono. See README for more details.
