@@ -1,3 +1,8 @@
+2006-03-01  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Added all the build files required to build and install this special
+	(Cecil based) version of permview.
+
 2005-10-07  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* permview.cs: Sort the XML output for easier searching
